refactoring, I did not like the previous solution, sorry for huge commit