@@ -2,22 +2,26 @@ package hauke.aufgabe.rules;
 
 import hauke.aufgabe.Card;
 import hauke.aufgabe.Hand;
-import hauke.aufgabe.HandResult;
+import hauke.aufgabe.problem.EvaluationException;
+import hauke.aufgabe.result.ValueResult;
 
-public class FourOfKindRule extends AbstractPokerRule<Card.Value> {
+import java.util.List;
+import java.util.function.Predicate;
+
+public class FourOfKindRule extends AbstractPokerRule {
+
+
     @Override
-    public boolean applicable(Hand hand) {
-        return isValidHand(hand)
-                .filter(validHand -> getCardsSortedByCount(validHand, 4).size() == 1)
-                .isPresent();
+    public Predicate<Hand> applicationPredicate() {
+        return hand -> getCardValuesSortedByCount(hand, 4).size() == 1;
     }
 
     @Override
-    public HandResult<Card.Value> rank(Hand hand) {
-        return isValidHand(hand)
-                .map(validHand -> getCardsSortedByCount(validHand, 4))
-                .filter(cards -> cards.size() == 1)
-                .map(foundVals -> new HandResult<>(Hand.Rank.FOUR_OF_A_KIND, foundVals.getFirst()))
-                .orElse(null);
+    public ValueResult evaluate(Hand hand) throws EvaluationException {
+        List<Card.Value> cards = getCardValuesSortedByCount(hand, 4);
+        if (cards.size() != 1) {
+            throw new EvaluationException("Four of a kind rule not applicable");
+        }
+        return new ValueResult(Hand.Rank.FOUR_OF_A_KIND, cards.get(0));
     }
 }
